added alpaca api keys

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Run Python Script
         run: python process_signal.py "${{ github.event.issue.title }}" "${{ github.event.issue.body }}"
+        env:
+          ALPACA_KEY: ${{ secrets.ALPACA_KEY }}
+          ALPACA_SECRET: ${{ secrets.ALPACA_SECRET }}
